# chibicc_arm64

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  chibicc.h  codegen.c  main.c  parse.c  preprocess.c  self.py  self2.py  strings.c  test.sh  tokenize.c  type.c
.run/: chibicc.run.xml  tests.run.xml
include/: stdarg.h  stdio.h  stdlib.h  string.h  strings.h  unistd.h
include/sys/: stat.h
test/: alignof.c  arith.c  cast.c  common  compare.sh  compat.c  complit.c  const.c  constexpr.c  control.c  decl.c  driver.sh  enum.c  extern.c  float.c  function.c  initializer.c  literal.c  macro.c  pointer.c  sizeof.c  stdhdr.c  string.c  struct.c  test.h  typedef.c  union.c  usualconv.c  varargs.c  variable.c
